Changed it so that windows that change the event (New/Import/Change) prevent ALL windows from opening, but the other windows only prevent those windows from opening, not each other. Updated Kiosk window so that it doesn't require as many steps. Updated ChipReaderWindow so that it uses the current event number instead of letting you select them. Added new buttons to dashboard for future features.

--- a/EventDirector/EventDirector.csproj
+++ b/EventDirector/EventDirector.csproj
@@ -233,7 +233,7 @@
     <Compile Include="UI_Old\DayOfParticipantsList.xaml.cs">
       <DependentUpon>DayOfParticipantsList.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UI_Old\ExampleLiabilityWaiver.xaml.cs">
+    <Compile Include="UI\Kiosk\ExampleLiabilityWaiver.xaml.cs">
       <DependentUpon>ExampleLiabilityWaiver.xaml</DependentUpon>
     </Compile>
     <Compile Include="IO\ExcelImporter.cs" />
@@ -376,7 +376,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="UI_Old\ExampleLiabilityWaiver.xaml">
+    <Page Include="UI\Kiosk\ExampleLiabilityWaiver.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
