--- a/EventDirector/EventDirector.csproj
+++ b/EventDirector/EventDirector.csproj
@@ -142,6 +142,15 @@
     <StartupObject>EventDirector.App</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.WindowsAPICodePack-Core.1.1.0.2\lib\Microsoft.WindowsAPICodePack.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAPICodePack.Shell, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.WindowsAPICodePack-Shell.1.1.0.0\lib\Microsoft.WindowsAPICodePack.Shell.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAPICodePack.ShellExtensions, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.WindowsAPICodePack-Shell.1.1.0.0\lib\Microsoft.WindowsAPICodePack.ShellExtensions.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -193,6 +202,7 @@
     <Compile Include="Constants\Distances.cs" />
     <Compile Include="Constants\JsonOptions.cs" />
     <Compile Include="Constants\Settings.cs" />
+    <Compile Include="Interfaces\IDataExporter.cs" />
     <Compile Include="Interfaces\IMainPage.cs" />
     <Compile Include="Interfaces\INewMainWindow.cs" />
     <Compile Include="Interfaces\IWindowCallback.cs" />
@@ -206,10 +216,15 @@
     <Compile Include="UI\ChipAssignment\ChipTool.xaml.cs">
       <DependentUpon>ChipTool.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\ChipAssignment\ExportBibChip.xaml.cs">
+      <DependentUpon>ExportBibChip.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\EventWindows\ChangeEventWindow.xaml.cs">
       <DependentUpon>ChangeEventWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\EventWindows\StaticEvent.cs" />
+    <Compile Include="IO\CSVExporter.cs" />
+    <Compile Include="IO\ExcelExporter.cs" />
     <Compile Include="UI\Import\ImportFilePage2Alt.xaml.cs">
       <DependentUpon>ImportFilePage2Alt.xaml</DependentUpon>
     </Compile>
@@ -379,6 +394,10 @@
     <Compile Include="Objects\Helpers\Utils.cs" />
     <Compile Include="Network\ZeroConf.cs" />
     <Page Include="UI\ChipAssignment\ChipTool.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\ChipAssignment\ExportBibChip.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
