Added age groups to the database. Updated Age Groups page so it functions. Added ability to get a division based on it's ID to the database. Made segments comparable and equatable. Small tweaks to locations page. Updated segments page so it functions now. Disabled reports button on main window since it won't be worked on for a bit.

--- a/EventDirector/EventDirector.csproj
+++ b/EventDirector/EventDirector.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Interfaces\IMainPage.cs" />
     <Compile Include="Interfaces\INewMainWindow.cs" />
     <Compile Include="Interfaces\IWindowCallback.cs" />
+    <Compile Include="Objects\AgeGroup.cs" />
     <Compile Include="Objects\Apparel.cs" />
     <Compile Include="Objects\AppSetting.cs" />
     <Compile Include="Objects\AvailableBib.cs" />
