Added TimingSystem object for use between classes. MainWindow will be the controller for the Timing System and thus requires methods to connect to, disconnect from, and inform the timing window what is connected. MainWindow needed a method to inform the Timing Window that the information it was using may have been updated. (May morph into more than it is currently.) Added this call to various pages where it may be useful. Modified the width of the timing window. Changed the object held by the Timing Window into the new MainWindow object. Timing Window should now be able to connect to timing systems, disconnect from them, and when open show the status of said systems.

--- a/EventDirector/EventDirector.csproj
+++ b/EventDirector/EventDirector.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Objects\ChipRead.cs" />
     <Compile Include="Objects\Range.cs" />
     <Compile Include="Objects\Segment.cs" />
+    <Compile Include="Objects\TimingSystem.cs" />
     <Compile Include="UI\ChipAssignment\ChipTool.xaml.cs">
       <DependentUpon>ChipTool.xaml</DependentUpon>
     </Compile>
