Moved some RFID UI files into their own folder under UI/Timing/RFID. Changed returns for some functions in the MainWindow. Added a function to MainWindow so we know when a TimingSystem randomly disconnects. Removed some unnecessary multiplication in the TCP server class. Changed Connected in TimingSystem to a status so we can know when we're trying to connect to one. Added Socket, Type, and Name to the TimingSystem class for obvious reasons. Added TimingController object (and thread) for controlling TimingSystems. MainWindow holds the TimingController and the TimingController keeps track of connected TimingSystems. Changed slightly how we deal with TimingSystems in the TimingWindow. We now tell AReaderBox to update itself when we're updating everything (change connected/disconnected/waiting status).

--- a/EventDirector/EventDirector.csproj
+++ b/EventDirector/EventDirector.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Objects\Range.cs" />
     <Compile Include="Objects\Segment.cs" />
     <Compile Include="Objects\TimingSystem.cs" />
+    <Compile Include="Timing\TimingController.cs" />
     <Compile Include="UI\ChipAssignment\ChipTool.xaml.cs">
       <DependentUpon>ChipTool.xaml</DependentUpon>
     </Compile>
@@ -372,10 +373,10 @@
     <Compile Include="UI\Timing\RawReadsWindow.xaml.cs">
       <DependentUpon>RawReadsWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Timing\RFID\RFIDSettings.xaml.cs">
+    <Compile Include="UI\Timing\RFID\RFIDSettings.xaml.cs">
       <DependentUpon>RFIDSettings.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Timing\RFID\RFIDTime.xaml.cs">
+    <Compile Include="UI\Timing\RFID\RFIDTime.xaml.cs">
       <DependentUpon>RFIDTime.xaml</DependentUpon>
     </Compile>
     <Compile Include="Timing\RFID\RFIDUltraInterface.cs" />
@@ -579,11 +580,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Timing\RFID\RFIDSettings.xaml">
+    <Page Include="UI\Timing\RFID\RFIDSettings.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Timing\RFID\RFIDTime.xaml">
+    <Page Include="UI\Timing\RFID\RFIDTime.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
