Added dictionary to find human readable names for the timing systems/methods to Default Timing constants. Added timing system to event table in database. Updated event methods in database and event class to reflect said change. Moved a few more files around. Added constructors to TimingSystem due to future plans for allowing multiple types of systems. Added interface for interacting with timing systems. Updated RFIDUltraInterface to be better able to handle parsing messages. TimingController now looks to see if we've seen a confirmation message indicating that we've connected to a timing system. Basis for message parsing in TimingController now in place. TimingController checks for systems that haven't connected, sets to disconnected, removes socket from listening group, and updates TimingWindow. Ensured that UpdateTimingWindow() in MainWindow gets run on a UI thread since a different thread may call it. Added ability to change the timing method for a race in the timing window. Changed how we deal with ports in the timing system.

--- a/EventDirector/EventDirector.csproj
+++ b/EventDirector/EventDirector.csproj
@@ -202,10 +202,11 @@
     <Compile Include="Constants\Distances.cs" />
     <Compile Include="Constants\JsonOptions.cs" />
     <Compile Include="Constants\Settings.cs" />
-    <Compile Include="Interfaces\IDataExporter.cs" />
-    <Compile Include="Interfaces\IMainPage.cs" />
-    <Compile Include="Interfaces\INewMainWindow.cs" />
-    <Compile Include="Interfaces\IWindowCallback.cs" />
+    <Compile Include="Interfaces\IO\IDataExporter.cs" />
+    <Compile Include="Interfaces\Timing\ITimingSystemInterface.cs" />
+    <Compile Include="Interfaces\UI\IMainPage.cs" />
+    <Compile Include="Interfaces\UI\INewMainWindow.cs" />
+    <Compile Include="Interfaces\UI\IWindowCallback.cs" />
     <Compile Include="Objects\AgeGroup.cs" />
     <Compile Include="Objects\Apparel.cs" />
     <Compile Include="Objects\AppSetting.cs" />
@@ -300,14 +301,14 @@
     <Compile Include="UI\Export\ExportParticipants.xaml.cs">
       <DependentUpon>ExportParticipants.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Interfaces\IChangeUpdater.cs" />
-    <Compile Include="Interfaces\IDataImporter.cs" />
+    <Compile Include="Interfaces\UI\IChangeUpdater.cs" />
+    <Compile Include="Interfaces\IO\IDataImporter.cs" />
     <Compile Include="Database\IDBInterface.cs" />
     <Compile Include="Objects\Division.cs" />
     <Compile Include="Objects\Event.cs" />
     <Compile Include="Objects\EventSpecific.cs" />
     <Compile Include="Interfaces\IEDConnection.cs" />
-    <Compile Include="Interfaces\IMainWindow.cs" />
+    <Compile Include="Interfaces\UI\IMainWindow.cs" />
     <Compile Include="IO\ImportData.cs" />
     <Compile Include="UI\Import\ImportFilePage1.xaml.cs">
       <DependentUpon>ImportFilePage1.xaml</DependentUpon>
